[package]
name = "cloud_p2p_project"
version = "0.1.0"
edition = "2021"

[dependencies]
# For loading, manipulating, and saving images
image = { version = "0.24.7", features = ["png"] }
clap = { version = "4.5.4", features = ["derive"] }

# For serializing/deserializing our permission data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"

# For handling errors easily
anyhow = "1.0.86"

# This helper fixes the "Address already in use" error
socket2 = "0.5.7"

# For Raft implementation
tokio = { version = "1.40", features = ["full"] }
rand = "0.8"

# For logging
log = "0.4"
env_logger = "0.11"